[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/enemy_lorenna.gd" type="Script" id=1]
[ext_resource path="res://sprites/new/lorenna-0.png" type="Texture" id=2]
[ext_resource path="res://sprites/new/lorenna-1.png" type="Texture" id=3]
[ext_resource path="res://sprites/new/lorenna-2.png" type="Texture" id=4]
[ext_resource path="res://sprites/new/lorenna-3.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 36.9362, 12.8895 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "move-left",
"speed": 15.0
} ]

[node name="enemy_lorenna" type="KinematicBody2D" groups=[
"enemy",
]]

z_index = 50
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Z Index" ]
detect_radius = 250
fire_rate = 0.2
bullet = null
speed = 100
health = 15

[node name="sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )

[node name="shape" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 7.62939e-006, 7.54699 )
shape = SubResource( 1 )

[node name="vehicle" type="AnimatedSprite" parent="." index="2"]

frames = SubResource( 2 )
animation = "move-left"

[node name="vision" type="Area2D" parent="." index="3"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="shape" type="CollisionShape2D" parent="vision" index="0"]

[node name="timer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="body_entered" from="vision" to="." method="_on_vision_body_entered"]

[connection signal="body_exited" from="vision" to="." method="_on_vision_body_exited"]

[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]


